@@ -181,9 +181,6 @@ grub_at_keyboard_getkey_noblock (void)
   switch (code)
     {
       case CAPS_LOCK:
-	/* Caps lock sends scan code twice.  Get the second one and discard it.  */
-	while (grub_keyboard_getkey () == -1);
-
 	at_keyboard_status ^= KEYBOARD_STATUS_CAPS_LOCK;
 	led_status ^= KEYBOARD_LED_CAPS;
 	keyboard_controller_led (led_status);
@@ -194,9 +191,6 @@ grub_at_keyboard_getkey_noblock (void)
 	key = -1;
 	break;
       case NUM_LOCK:
-	/* Num lock sends scan code twice.  Get the second one and discard it.  */
-	while (grub_keyboard_getkey () == -1);
-
 	at_keyboard_status ^= KEYBOARD_STATUS_NUM_LOCK;
 	led_status ^= KEYBOARD_LED_NUM;
 	keyboard_controller_led (led_status);
